# SafeENV

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
landing/: index.html  next.config.mjs  package-lock.json  package.json  style.css  tailwind.config.ts
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/app/docs/: page.tsx
landing/src/components/ui/: hero-futuristic.tsx
safeenv/: __init__.py  __main__.py  cli.py  dependency_scanner.py  doctor.py  env_manager.py  env_scanner.py  installer.py  runner.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_dependency_scanner.py  test_env_manager.py  test_env_scanner.py  test_runner.py
