[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "safeenv-tool"
version = "0.1.2"
description = "One-command Python environment setup — auto-detects imports, creates .venv, and installs packages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "safeenv contributors", email = "hello@safeenv.dev" }]
keywords = [
    "virtualenv",
    "environment",
    "dependencies",
    "cli",
    "developer-tools",
    "beginner",
    "education",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Runtime dependencies — kept minimal on purpose.
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
]

[project.urls]
Homepage   = "https://github.com/safeenv/safeenv"
Repository = "https://github.com/safeenv/safeenv"
Issues     = "https://github.com/safeenv/safeenv/issues"

# ── CLI entry point ───────────────────────────────────────────────────────────
# After `pip install -e .` the `safeenv` command resolves to cli.main().

[project.scripts]
safeenv = "safeenv.cli:main"

# ── Package discovery ─────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["safeenv*"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["safeenv"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
